--- a/src/Componentes/CargaDocumento/estilos.css
+++ b/src/Componentes/CargaDocumento/estilos.css
@@ -64,6 +64,7 @@
   margin-top: 2rem;
   padding: 7px;
   font-size: 1rem;
+  width: 30%;
   background-color: #000000;
   color: #ffffff;
   border: none;
