--- a/src/Componentes/CreacionVehiculo/estilos.css
+++ b/src/Componentes/CreacionVehiculo/estilos.css
@@ -3,7 +3,7 @@
   display: flex;
   justify-content: space-around;
   width: 100%;
-  margin-bottom: 20px;
+  /* margin-bottom: 20px; */
   padding-left: 10px;
   padding-right: 10px;
   gap: 5px; 
@@ -49,8 +49,7 @@
 }
 
 /* Botón genérico de “Siguiente” o “Anterior” */
-.Boton-siguiente,
-.Boton-anterior {
+.CreacionVehiculo-Boton-siguiente{
   background-color: #2F6B3E;
   color: #fff;
   border: none;
@@ -61,16 +60,31 @@
   margin-top: 10px;
 }
 
-.Boton-siguiente:hover,
-.Boton-anterior:hover {
+.CreacionVehiculo-Boton-siguiente:hover{
   background-color: #159e30;
 }
 
 /* Contenedor para agrupar botones de navegación */
-.Botones-navegacion {
+.CreacionVehiculo-Botones-navegacion {
   display: flex;
   justify-content: space-between;
   margin-top: 20px;
+  gap: 15px;
+}
+
+.CreacionVehiculo-Botones-navegacion button{
+  background-color: #2F6B3E;
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  padding: 8px 16px;
+  cursor: pointer;
+  transition: background 0.3s ease;
+  margin-top: 10px;
+}
+
+.CreacionVehiculo-Botones-navegacion button:hover{
+  background-color: #159e30;
 }
 
 /* Contenedor principal */
