se consulta guia desde pagina inicio

--- a/src/Componentes/Datos/estilos.css
+++ b/src/Componentes/Datos/estilos.css
@@ -85,7 +85,7 @@
   padding: 10px;
   border-radius: 7px;
   font-weight: 600;
-  background-color:rgba(47, 107, 62, 0.1);
+  background-color:rgb(255, 187, 0);
 }
 
 .Datos-botonActualizar:hover {
