--- a/src/Paginas/TramitarPedidos/estilos.css
+++ b/src/Paginas/TramitarPedidos/estilos.css
@@ -26,12 +26,17 @@
   justify-content: space-between;
   align-items: center;
   flex-wrap: wrap;
-  margin-bottom: 0.5rem;
+  margin-bottom: 1rem;
 }
 
 .TramitarPedidos-titulo {
+  display: flex;
+  justify-content: center;
+  align-items:center;
+  gap: 7px;
   margin: 0;
   font-size: 2rem;
+  flex-direction: row-reverse;
 }
 
 /* Botón cerrar sesión */
@@ -219,6 +224,12 @@
   background: #007bff;
   color: #fff;
 }
+
+.TramitarPedidos-Logo{
+  width: 30px;
+}
+
+
 
 /* Filtros de completados (fecha) */
 .TramitarPedidos-completados .TramitarPedidos-filtros label {
