--- a/src/index.css
+++ b/src/index.css
@@ -3,5 +3,5 @@
   padding: 0;
   box-sizing: border-box;
   text-decoration: none;
-  font-family: Arial, sans-serif;
+  font-family: 'Inter', sans-serif;
 }
