se ajusta diseño

--- a/src/Componentes/PedidosComponentes/ExportarAutorizados.css
+++ b/src/Componentes/PedidosComponentes/ExportarAutorizados.css
@@ -6,7 +6,7 @@
 }
 
 .ExportarAutorizados-boton {
-  background-color: cadetblue;
+  background-color: #888a8e;
   color: #fff;
   font-weight: 600;
   border: none;
