--- a/src/Componentes/PedidosComponentes/CargarPedidos.css
+++ b/src/Componentes/PedidosComponentes/CargarPedidos.css
@@ -1,5 +1,5 @@
 .CargarPedidos-boton {
-  background-color: cadetblue;
+  background-color: #888a8e;
   color: #fff;
   font-weight: 600;
   border: none;
